Kubernetes/CASE STUDY - A Kubernetes Test Deployment for Ventura Software/custom-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: custom-deployment
  labels:
    app: custom
spec:
  replicas: 2
  selector:
    matchLabels:
      app: custom
  template:
    metadata:
      labels:
        app: custom
    spec:
      containers:
      - name: custom-site
        image: venkatesh1503/custom-website:v1
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: custom-service
spec:
  selector:
    app: custom
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
