Kubernetes/CASE STUDY - A Kubernetes Test Deployment for Ventura Software/ingress.yml
# ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ventura-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /apache
        pathType: Prefix
        backend:
          service:
            name: apache-service
            port:
              number: 80
      - path: /custom
        pathType: Prefix
        backend:
          service:
            name: custom-service
            port:
              number: 80
